--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -261,7 +261,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: "go.mod"
+          go-version: "1.21"
       - name: gofmt
         run: |
           if [ $(gofmt -l . | wc -l) -gt 0 ]; then
@@ -279,7 +279,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: "go.mod"
+          go-version: "1.21"
       - run: go vet
 
   client-lint:
@@ -292,11 +292,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: "go.mod"
+          go-version: "1.21"
       - name: Staticcheck
         uses: dominikh/staticcheck-action@v1.4.0
         with:
-          version: "2024.1.1"
+          version: "2025.1.1"
           install-go: false
 
   client-integration-test:
